--- a/Calculator/Calculator/Calculator-Info.plist
+++ b/Calculator/Calculator/Calculator-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>pt.mindclick.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>pt.mindclick.cs193p.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
