--- a/2013 Winter/Matchismo/Matchismo/Warnings.xcconfig
+++ b/2013 Winter/Matchismo/Matchismo/Warnings.xcconfig
@@ -1,5 +1,5 @@
 //
-//  MoreWarnings.xcconfig
+//  Warnings.xcconfig
 //
 //  Created by Steven Fisher:
 //      http://tewha.net/2010/11/xcode-warnings/
@@ -31,5 +31,5 @@ CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 CLANG_WARN_IMPLICIT_SIGN_CONVERSION = YES
 CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
 OTHER_CFLAGS = -Wextra -Wno-unused-parameter
-//GCC_TREAT_WARNINGS_AS_ERRORS = YES
+GCC_TREAT_WARNINGS_AS_ERRORS = YES
 RUN_CLANG_STATIC_ANALYZER = YES
