--- a/2013 Winter/SPoT/SPoT/SPoT-Info.plist
+++ b/2013 Winter/SPoT/SPoT/SPoT-Info.plist
@@ -25,7 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
-	<string>PhotoBrowsing</string>
+	<string>iPhonePhotoBrowsing</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
